--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "redux-thunk": "^2.4.2",
         "reselect": "^4.1.8",
         "sass": "^1.63.6",
+        "typed.js": "^2.0.16",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
