--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
+        "react-tsparticles": "^2.12.2",
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
         "reselect": "^4.1.8",
         "sass": "^1.63.6",
+        "tsparticles": "^2.12.0",
         "typed.js": "^2.0.16",
         "web-vitals": "^2.1.4"
     },
