--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "redux-thunk": "^2.4.2",
         "reselect": "^4.1.8",
         "sass": "^1.63.6",
+        "three": "^0.157.0",
         "tsparticles": "^2.12.0",
         "typed.js": "^2.0.16",
         "web-vitals": "^2.1.4"
