--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^0.19.2",
         "react": "^18.2.0",
+        "redux": "^4.2.1",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "react-tsparticles": "^2.12.2",
-        "redux": "^4.2.1",
-        "redux-thunk": "^2.4.2",
-        "reselect": "^4.1.8",
-        "sass": "^1.63.6",
-        "three": "^0.157.0",
         "tsparticles": "^2.12.0",
+        "react-collapsed": "^4.0.4",
+        "styled-components": "^5.3.0",
         "typed.js": "^2.0.16",
+        "sass": "^1.63.6",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
