--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
     "private": true,
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@formspree/react": "^2.5.1",
         "@fortawesome/fontawesome-svg-core": "^6.4.2",
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@formspree/react": "^2.5.1",
         "@redux-devtools/extension": "^3.2.5",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +20,7 @@
         "react-router-dom": "^6.15.0",
         "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.1",
+        "react-scroll": "^1.9.0",
         "react-tsparticles": "^2.12.2",
         "redux": "^4.2.1",
         "sass": "^1.63.6",
