--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "argent_bank",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://localhost:3000/home",
     "dependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@formspree/react": "^2.5.1",
