--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "axios": "^1.6.0",
         "nanoid": "^5.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -30,6 +29,7 @@
         "styled-components": "^5.3.0",
         "tsparticles": "^2.12.0",
         "typed.js": "^2.0.16",
+        "redux-thunk": "^2.4.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
