--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
     "private": true,
     "homepage": "https://Jerem16.github.io/portfolio",
     "dependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@formspree/react": "^2.5.1",
         "@redux-devtools/extension": "^3.2.5",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "nanoid": "^5.0.3",
+        "nanoid": "^5.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-lazy-load-image-component": "^1.6.0",
         "react-redux": "^8.1.2",
         "react-router-dom": "^6.15.0",
-        "react-router-hash-link": "^2.4.3",
         "react-scripts": "5.0.1",
         "react-scroll": "^1.9.0",
         "react-tsparticles": "^2.12.2",
@@ -54,5 +53,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^6.0.0"
     }
 }
