--- a/package.json
+++ b/package.json
@@ -2,20 +2,15 @@
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://Jerem16.github.io/portfolio",
     "dependencies": {
         "@formspree/react": "^2.5.1",
-        "@redux-devtools/extension": "^3.2.5",
         "@reduxjs/toolkit": "^1.9.5",
-        "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "nanoid": "^5.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-lazy-load-image-component": "^1.6.0",
         "react-redux": "^8.1.2",
-        "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "react-scroll": "^1.9.0",
         "react-tsparticles": "^2.12.2",
@@ -23,23 +18,19 @@
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
         "sass": "^1.63.6",
-        "styled-components": "^5.3.0",
+        "nanoid": "^5.0.2",
+        "styled-components": "6.1.1",
         "tsparticles": "^2.12.0",
-        "typed.js": "^2.0.16",
-        "web-vitals": "^2.1.4"
+        "typed.js": "^2.0.16"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
-            "react-app",
-            "react-app/jest"
+            "react-app"
         ]
     },
     "browserslist": {
@@ -53,8 +44,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "gh-pages": "^6.0.0"
     }
 }
