--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "nanoid": "^5.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-lazy-load-image-component": "^1.6.0",
@@ -18,7 +19,7 @@
         "redux": "^4.2.1",
         "redux-thunk": "^2.4.2",
         "sass": "^1.63.6",
-        "nanoid": "^5.0.2",
+        "shortid": "^2.2.16",
         "styled-components": "6.1.1",
         "tsparticles": "^2.12.0",
         "typed.js": "^2.0.16"
