--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@formspree/react": "^2.5.1",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/react": "^13.4.0",
@@ -19,7 +20,7 @@
         "redux-thunk": "^2.4.2",
         "sass": "^1.63.6",
         "shortid": "^2.2.16",
-        "styled-components": "6.1.1",
+        "styled-components": "^5.3.0",
         "tsparticles": "^2.12.0",
         "typed.js": "^2.0.16"
     },
